--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>UECeSports -公式ホームページ-</title>
-
     <!-- Page styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -46,7 +45,7 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span></span>
+            <img class="logo-image" src="images/logo_sub.svg"><span class="title">&nbsp&nbspUECeSports</span>
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -57,7 +56,7 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="news.html">ニュース</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="schedule.html">スケジュール</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="entry.html">加入したい方はこちら</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="member.html">所属中の方はこちら</a>
+              <!--<a class="mdl-navigation__link mdl-typography--text-uppercase" href="member.html">所属中の方はこちら</a>-->
             </nav>
           </div>
           <span class="android-mobile-title mdl-layout-title">
@@ -67,21 +66,21 @@
       </div>
       <div class="android-drawer mdl-layout__drawer">
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="news.html">ニュース</a>
-            <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
-            <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
-            <a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>
-            <div class="android-drawer-separator"></div>
-            <a class="mdl-navigation__link" href="license.html">ライセンス</a>
+          <a class="mdl-navigation__link" href="news.html">ニュース</a>
+          <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
+          <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
+          <!--<a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>-->
+          <div class="android-drawer-separator"></div>
+          <a class="mdl-navigation__link" href="license.html">ライセンス</a>
         </nav>
       </div>
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="top-section mdl-typography--text-center mdl-">
-          <div class="logo-font top-slogan">LoLしよう</div>
+          <div class="logo-font top-slogan">ゲームしよう</div>
           <div class="logo-font top-sub-slogan">楽しく、勝つ。</div>
           <div class="logo-font top-entry-button">
-            <button class="logo-font button-box mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">加入したい方はこちら</button>
+            <button class="logo-font button-box mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="location.href='entry.html'">加入したい方はこちら</button>
           </div>
         </div>
         <!--<div class="android-screen-section mdl-typography--text-center">
@@ -225,48 +224,19 @@
           </div>
         </div>-->
 
-        <footer class="android-footer mdl-mega-footer">
-          <div class="mdl-mega-footer--top-section">
-            <div class="mdl-mega-footer--left-section">
+        <footer class="footer mdl-mini-footer">
+          <div class="mdl-mini-footer--left-section">
+              <p class="mdl-typography--font-light">©2017 UECeSports</p>
+              <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
+          </div>
+          <div class="mdl-mini-footer__right-section">
               <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
-                <img src="images/twitter_circle.svg">
+                  <img src="images/twitter_circle.svg">
               </button>
               <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
-                <img src="images/facebook_circle.svg">
+                  <img src="images/facebook_circle.svg">
               </button>
-            </div>
           </div>
-
-          <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">©2017 UECeSports</p>
-            <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
-          </div>
-          <!--
-          <div class="mdl-mega-footer--bottom-section">
-            <a class="android-link android-link-menu mdl-typography--font-light" id="version-dropdown">
-              Versions
-              <i class="material-icons">arrow_drop_up</i>
-            </a>
-            <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="version-dropdown">
-              <li class="mdl-menu__item">5.0 Lollipop</li>
-              <li class="mdl-menu__item">4.4 KitKat</li>
-              <li class="mdl-menu__item">4.3 Jelly Bean</li>
-              <li class="mdl-menu__item">Android History</li>
-            </ul>
-            <a class="android-link android-link-menu mdl-typography--font-light" id="developers-dropdown">
-              For Developers
-              <i class="material-icons">arrow_drop_up</i>
-            </a>
-            <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="developers-dropdown">
-              <li class="mdl-menu__item">App developer resources</li>
-              <li class="mdl-menu__item">Android Open Source Project</li>
-              <li class="mdl-menu__item">Android SDK</li>
-              <li class="mdl-menu__item">Android for Work</li>
-            </ul>
-            <a class="android-link mdl-typography--font-light" href="">Blog</a>
-            <a class="android-link mdl-typography--font-light" href="">Privacy Policy</a>
-          </div>
-          -->
         </footer>
       </div>
     </div>
