--- a/member.html
+++ b/member.html
@@ -50,32 +50,34 @@
         </div>
     </div>
     <div class="android-drawer mdl-layout__drawer">
-        <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="news.html">ニュース</a>
-            <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
-            <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
-            <a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>
-            <div class="android-drawer-separator"></div>
-            <a class="mdl-navigation__link" href="license.html">ライセンス</a>
-        </nav>
-    </div>
+    <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="news.html">ニュース</a>
+        <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
+        <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
+        <a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>
+        <div class="android-drawer-separator"></div>
+        <a class="mdl-navigation__link" href="license.html">ライセンス</a>
+    </nav>
+</div>
     <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="common-section mdl-typography--text-left mdl-">
         </div>
+        <footer class="footer mdl-mini-footer">
+            <div class="mdl-mini-footer--left-section">
+                <p class="mdl-typography--font-light">©2017 UECeSports</p>
+                <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
+            </div>
+            <div class="mdl-mini-footer__right-section">
+                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                    <img src="images/twitter_circle.svg">
+                </button>
+                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                    <img src="images/facebook_circle.svg">
+                </button>
+            </div>
+        </footer>
     </div>
-    <footer class="android-footer mdl-mega-footer">
-        <div class="mdl-mega-footer--top-section">
-            <div class="mdl-mega-footer--left-section"></div>
-        </div>
-
-        <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">©2017 UECeSports</p>
-            <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
-        </div>
-        <div class="mdl-mega-footer--bottom-section">
-        </div>
-    </footer>
 </div>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
