--- a/schedule.html
+++ b/schedule.html
@@ -41,7 +41,7 @@
                     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="news.html">ニュース</a>
                     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="schedule.html">スケジュール</a>
                     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="entry.html">加入したい方はこちら</a>
-                    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="member.html">所属中の方はこちら</a>
+                    <!--<a class="mdl-navigation__link mdl-typography--text-uppercase" href="member.html">所属中の方はこちら</a>-->
                 </nav>
             </div>
           <span class="android-mobile-title mdl-layout-title">
@@ -54,30 +54,33 @@
             <a class="mdl-navigation__link" href="news.html">ニュース</a>
             <a class="mdl-navigation__link" href="schedule.html">スケジュール</a>
             <a class="mdl-navigation__link" href="entry.html">加入したい方はこちら</a>
-            <a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>
+            <!--<a class="mdl-navigation__link" href="member.html">所属中の方はこちら</a>-->
             <div class="android-drawer-separator"></div>
             <a class="mdl-navigation__link" href="license.html">ライセンス</a>
         </nav>
     </div>
     <div class="android-content mdl-layout__content">
         <a name="top"></a>
-        <div class="schedule-section mdl-typography--text-left mdl-">
+        <div class="section-init schedule-section mdl-typography--text-left mdl-">
             <div class="logo-font common-slogan">スケジュール</div>
             <div class="logo-font common-sub-slogan">イベント日程</div>
         </div>
+        <script async name='freecals' id='calinc-mem64327-height1000' type="text/javascript" src="//freecalend.com/jstac/calinc.js"></script>
+        <footer class="footer mdl-mini-footer">
+            <div class="mdl-mini-footer--left-section">
+                <p class="mdl-typography--font-light">©2017 UECeSports</p>
+                <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
+            </div>
+            <div class="mdl-mini-footer__right-section">
+                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                    <img src="images/twitter_circle.svg">
+                </button>
+                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button link-sns-logo">
+                    <img src="images/facebook_circle.svg">
+                </button>
+            </div>
+        </footer>
     </div>
-    <footer class="android-footer mdl-mega-footer">
-        <div class="mdl-mega-footer--top-section">
-            <div class="mdl-mega-footer--left-section"></div>
-        </div>
-
-        <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">©2017 UECeSports</p>
-            <p class="mdl-typography--font-light">一部の画像、名称は Riot Games に帰属します。</p>
-        </div>
-        <div class="mdl-mega-footer--bottom-section">
-        </div>
-    </footer>
 </div>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
