--- a/dev/index.html
+++ b/dev/index.html
@@ -14,133 +14,149 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-<!--[if lte IE 9]>
+    <!--[if lte IE 9]>
 <p class="browserupgrade">あなたは <strong>セキュリティ保障期間切れ</strong> のブラウザーを使用しています。 このホームページをご覧になるには <a
         href="https://browsehappy.com/">ブラウザーをアップグレード</a> して下さい。（外部サイトにリンクします。）</p>
 <![endif]-->
 
-<!-- ###############    MAIN CONTENT    ############### -->
-<div class="navigation"></div>
-<div class="content">
-    <div class="welcomeBlock">
-        <div class="welcomeBlock__logo"><img src="img/logo_sub.svg" width="100px"></div>
-        <div class="welcomeBlock__heading">UECeSports</div>
-        <div class="welcomeBlock__caption">楽しく、勝つ。</div>
-        <div class="welcomeBlock__entryBtn">
-            <svg class="welcomeBlock__entryBtn__svg" id="SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-                <polygon id="actor_2" points="87.06,19.77 44.36,11.47 23.28,49.51 52.94,81.32 92.36,62.94"
-                         opacity="0.50" fill="rgba(171,205,255,1)" fill-opacity="1" stroke="rgba(119,247,144,1)"
-                         stroke-width="0" stroke-opacity="1" stroke-dasharray=""></polygon>
-                <polygon id="actor_1" points="44.00,15.00 4.06,44.02 19.31,90.98 68.69,90.98 83.94,44.02" opacity="0.50"
-                         fill="rgba(160,215,242,1)" fill-opacity="1" stroke="rgba(119,247,144,1)" stroke-width="0"
-                         stroke-opacity="1" stroke-dasharray=""></polygon>
-                <script type="text/ecmascript"><![CDATA[
-                (function () {
-                    var actors = {};
-                    actors.actor_1 = {
-                        node: document.getElementById("SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0").getElementById("actor_1"),
-                        type: "polygon",
-                        cx: 44,
-                        cy: 57,
-                        dx: 84,
-                        dy: 24,
-                        opacity: 0.50
-                    };
-                    actors.actor_2 = {
-                        node: document.getElementById("SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0").getElementById("actor_2"),
-                        type: "polygon",
-                        cx: 60,
-                        cy: 45,
-                        dx: 74,
-                        dy: 24,
-                        opacity: 0.50
-                    };
-                    var tricks = {};
-                    tricks.trick_1 = (function (t, a) {
-                        a = (function (n) {
-                            return .5 > n ? 2 * n * n : -1 + (4 - 2 * n) * n
-                        })(a) % 1, a = a * 1 % 1, a = 0 > a ? 1 + a : a;
-                        var M = a * 1 * 360 * Math.PI / 180, i = t._tMatrix, _ = Math.cos(M), c = Math.sin(M),
-                            x = -Math.sin(M), s = Math.cos(M), h = -t.cx * Math.cos(M) + t.cy * Math.sin(M) + t.cx,
-                            n = -t.cx * Math.sin(M) - t.cy * Math.cos(M) + t.cy, r = i[0] * _ + i[2] * c,
-                            o = i[1] * _ + i[3] * c, y = i[0] * x + i[2] * s, f = i[1] * x + i[3] * s,
-                            d = i[0] * h + i[2] * n + i[4], e = i[1] * h + i[3] * n + i[5];
-                        t._tMatrix[0] = r, t._tMatrix[1] = o, t._tMatrix[2] = y, t._tMatrix[3] = f, t._tMatrix[4] = d, t._tMatrix[5] = e
-                    });
-                    tricks.trick_2 = (function (t, a) {
-                        a = (function (n) {
-                            return .5 > n ? 2 * n * n : -1 + (4 - 2 * n) * n
-                        })(a) % 1, a = a * 1 % 1, a = 0 > a ? 1 + a : a;
-                        var M = a * -1 * 360 * Math.PI / 180, i = t._tMatrix, _ = Math.cos(M), c = Math.sin(M),
-                            x = -Math.sin(M), s = Math.cos(M), h = -t.cx * Math.cos(M) + t.cy * Math.sin(M) + t.cx,
-                            n = -t.cx * Math.sin(M) - t.cy * Math.cos(M) + t.cy, r = i[0] * _ + i[2] * c,
-                            o = i[1] * _ + i[3] * c, y = i[0] * x + i[2] * s, f = i[1] * x + i[3] * s,
-                            d = i[0] * h + i[2] * n + i[4], e = i[1] * h + i[3] * n + i[5];
-                        t._tMatrix[0] = r, t._tMatrix[1] = o, t._tMatrix[2] = y, t._tMatrix[3] = f, t._tMatrix[4] = d, t._tMatrix[5] = e
-                    });
-                    var scenarios = {};
-                    scenarios.scenario_1 = {
-                        actors: ["actor_1"],
-                        tricks: [{trick: "trick_1", start: 0, end: 1}],
-                        startAfter: 0,
-                        duration: 20000,
-                        actorDelay: 0,
-                        repeat: 0,
-                        repeatDelay: 0
-                    };
-                    scenarios.scenario_2 = {
-                        actors: ["actor_2"],
-                        tricks: [{trick: "trick_2", start: 0, end: 1}],
-                        startAfter: 0,
-                        duration: 20000,
-                        actorDelay: 0,
-                        repeat: 0,
-                        repeatDelay: 0
-                    };
-                    var _reqAnimFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.oRequestAnimationFrame,
-                        fnTick = function (t) {
-                            var r, a, i, e, n, o, s, c, m, f, d, k, w;
-                            for (c in actors) actors[c]._tMatrix = [1, 0, 0, 1, 0, 0];
-                            for (s in scenarios) for (o = scenarios[s], m = t - o.startAfter, r = 0, a = o.actors.length; a > r; r++) {
-                                if (i = actors[o.actors[r]], i && i.node && i._tMatrix) for (f = 0, m >= 0 && (d = o.duration + o.repeatDelay, o.repeat > 0 && m > d * o.repeat && (f = 1), f += m % d / o.duration), e = 0, n = o.tricks.length; n > e; e++) k = o.tricks[e], w = (f - k.start) * (1 / (k.end - k.start)), tricks[k.trick] && tricks[k.trick](i, Math.max(0, Math.min(1, w)));
-                                m -= o.actorDelay
-                            }
-                            for (c in actors) i = actors[c], i && i.node && i._tMatrix && i.node.setAttribute("transform", "matrix(" + i._tMatrix.join() + ")");
-                            _reqAnimFrame(fnTick)
-                        };
-                    _reqAnimFrame(fnTick);
-                })()
-                ]]></script>
-            </svg>
-            <div class="welcomeBlock__entryBtn__caption">加入する</div>
+    <!-- ###############    MAIN CONTENT    ############### -->
+    <div class="navigation"></div>
+    <div class="content">
+        <div class="welcome-sector">
+            <!-- Essence -->
+            <div class="comeson">
+                <div class="welcome-sector__logo"><img src="img/logo_sub.svg" width="100px"></div>
+                <div class="welcome-sector__heading">UECeSports</div>
+                <div class="welcome-sector__caption">楽しく、勝つ。</div>
+                <div class="welcome-sector__entry-btn">
+                    <svg class="welcome-sector__entry-btn__svg" id="SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
+                        <polygon id="actor_2" points="87.06,19.77 44.36,11.47 23.28,49.51 52.94,81.32 92.36,62.94"
+                                 opacity="0.50" fill="rgba(171,205,255,1)" fill-opacity="1" stroke="rgba(119,247,144,1)"
+                                 stroke-width="0" stroke-opacity="1" stroke-dasharray=""></polygon>
+                        <polygon id="actor_1" points="44.00,15.00 4.06,44.02 19.31,90.98 68.69,90.98 83.94,44.02" opacity="0.50"
+                                 fill="rgba(160,215,242,1)" fill-opacity="1" stroke="rgba(119,247,144,1)" stroke-width="0"
+                                 stroke-opacity="1" stroke-dasharray=""></polygon>
+                        <script type="text/ecmascript"><![CDATA[
+                                (function () {
+                                    var actors = {};
+                                    actors.actor_1 = {
+                                        node: document.getElementById("SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0").getElementById("actor_1"),
+                                        type: "polygon",
+                                        cx: 44,
+                                        cy: 57,
+                                        dx: 84,
+                                        dy: 24,
+                                        opacity: 0.50
+                                    };
+                                    actors.actor_2 = {
+                                        node: document.getElementById("SVG-Circus-c817bf1c-2f4f-7baa-dcc1-7bbe493959a0").getElementById("actor_2"),
+                                        type: "polygon",
+                                        cx: 60,
+                                        cy: 45,
+                                        dx: 74,
+                                        dy: 24,
+                                        opacity: 0.50
+                                    };
+                                    var tricks = {};
+                                    tricks.trick_1 = (function (t, a) {
+                                        a = (function (n) {
+                                            return .5 > n ? 2 * n * n : -1 + (4 - 2 * n) * n
+                                        })(a) % 1, a = a * 1 % 1, a = 0 > a ? 1 + a : a;
+                                        var M = a * 1 * 360 * Math.PI / 180, i = t._tMatrix, _ = Math.cos(M), c = Math.sin(M),
+                                            x = -Math.sin(M), s = Math.cos(M), h = -t.cx * Math.cos(M) + t.cy * Math.sin(M) + t.cx,
+                                            n = -t.cx * Math.sin(M) - t.cy * Math.cos(M) + t.cy, r = i[0] * _ + i[2] * c,
+                                            o = i[1] * _ + i[3] * c, y = i[0] * x + i[2] * s, f = i[1] * x + i[3] * s,
+                                            d = i[0] * h + i[2] * n + i[4], e = i[1] * h + i[3] * n + i[5];
+                                        t._tMatrix[0] = r, t._tMatrix[1] = o, t._tMatrix[2] = y, t._tMatrix[3] = f, t._tMatrix[4] = d, t._tMatrix[5] = e
+                                    });
+                                    tricks.trick_2 = (function (t, a) {
+                                        a = (function (n) {
+                                            return .5 > n ? 2 * n * n : -1 + (4 - 2 * n) * n
+                                        })(a) % 1, a = a * 1 % 1, a = 0 > a ? 1 + a : a;
+                                        var M = a * -1 * 360 * Math.PI / 180, i = t._tMatrix, _ = Math.cos(M), c = Math.sin(M),
+                                            x = -Math.sin(M), s = Math.cos(M), h = -t.cx * Math.cos(M) + t.cy * Math.sin(M) + t.cx,
+                                            n = -t.cx * Math.sin(M) - t.cy * Math.cos(M) + t.cy, r = i[0] * _ + i[2] * c,
+                                            o = i[1] * _ + i[3] * c, y = i[0] * x + i[2] * s, f = i[1] * x + i[3] * s,
+                                            d = i[0] * h + i[2] * n + i[4], e = i[1] * h + i[3] * n + i[5];
+                                        t._tMatrix[0] = r, t._tMatrix[1] = o, t._tMatrix[2] = y, t._tMatrix[3] = f, t._tMatrix[4] = d, t._tMatrix[5] = e
+                                    });
+                                    var scenarios = {};
+                                    scenarios.scenario_1 = {
+                                        actors: ["actor_1"],
+                                        tricks: [{trick: "trick_1", start: 0, end: 1}],
+                                        startAfter: 0,
+                                        duration: 20000,
+                                        actorDelay: 0,
+                                        repeat: 0,
+                                        repeatDelay: 0
+                                    };
+                                    scenarios.scenario_2 = {
+                                        actors: ["actor_2"],
+                                        tricks: [{trick: "trick_2", start: 0, end: 1}],
+                                        startAfter: 0,
+                                        duration: 20000,
+                                        actorDelay: 0,
+                                        repeat: 0,
+                                        repeatDelay: 0
+                                    };
+                                    var _reqAnimFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.oRequestAnimationFrame,
+                                        fnTick = function (t) {
+                                            var r, a, i, e, n, o, s, c, m, f, d, k, w;
+                                            for (c in actors) actors[c]._tMatrix = [1, 0, 0, 1, 0, 0];
+                                            for (s in scenarios) for (o = scenarios[s], m = t - o.startAfter, r = 0, a = o.actors.length; a > r; r++) {
+                                                if (i = actors[o.actors[r]], i && i.node && i._tMatrix) for (f = 0, m >= 0 && (d = o.duration + o.repeatDelay, o.repeat > 0 && m > d * o.repeat && (f = 1), f += m % d / o.duration), e = 0, n = o.tricks.length; n > e; e++) k = o.tricks[e], w = (f - k.start) * (1 / (k.end - k.start)), tricks[k.trick] && tricks[k.trick](i, Math.max(0, Math.min(1, w)));
+                                                m -= o.actorDelay
+                                            }
+                                            for (c in actors) i = actors[c], i && i.node && i._tMatrix && i.node.setAttribute("transform", "matrix(" + i._tMatrix.join() + ")");
+                                            _reqAnimFrame(fnTick)
+                                        };
+                                    _reqAnimFrame(fnTick);
+                                })()
+                            ]]>
+                        </script>
+                    </svg>
+                    <div class="welcome-sector__entry-btn__caption">加入する</div>
+                </div>
+            </div>
+            <!-- BG -->
+            <div class="welcome-sector__bg-particle" id="particles-js"></div>
+            <div class="welcome-sector__bg"></div>
+            <div class="welcome-sector__bg-split"></div>
+        </div>
+        <div class="label1"></div>
+        <div class="intro">
+            <div class="produce">
+                <div class="produce__lol">
+                    <img src="img/League%20of%20Legends%20Logo.png" width="200px">
+                </div>
+                <div class="produce__pubg">
+                    <img src="img/PUBG%20logo.png" width="200x">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="label"><img src="img/label.png" class="label__img"></div>
-    <div id="particles-js"></div>
-    <div class="annie"></div>
-    <div class="annie--char"></div>
-</div>
-<div class="footer"></div>
+    <div class="footer"></div>
 
-<!-- ###############  END MAIN CONTENT  ############### -->
-<script src="js/vendor/modernizr-3.5.0.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-<script src="js/plugins.js"></script>
-<script src="js/particles.min.js"></script>
-<script src="js/main.js"></script>
-<script>
-    window.ga = function () {
-        ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'UA-112752175-1', 'auto');
-    ga('send', 'pageview')
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <!-- ###############  END MAIN CONTENT  ############### -->
+    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/particles.min.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+        window.ga = function() {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-112752175-1', 'auto');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 </html>
